--- a/pages/vector_spaces/span_game/span_game.jade
+++ b/pages/vector_spaces/span_game/span_game.jade
@@ -60,4 +60,8 @@ block content
 
       hr
       .row.center
-        button.btn.btn-default#reset_game Reset
+        .btn-group
+          button.btn.btn-default#reset_game Reset
+          button.btn.btn-default#reveal_hint Reveal Hint
+      .row#hint.hidden
+        p Try rotating the camera so that one basis vector lines up with the origin.  Then solve the problem in 2D!
