--- a/pages/vectors/intro/intro.jade
+++ b/pages/vectors/intro/intro.jade
@@ -12,9 +12,10 @@ block content
     - options.min = -100
     - options.max = 100
     - options.step = 10
-    - options.x = 50
-    - options.y = 50
-    - options.z = 0
+    - options.vector = {}
+    - options.vector.x = 50
+    - options.vector.y = 50
+    - options.vector.z = 0
 
     .col-md-6
       +vector_slider_input('vectorInput', options)
