--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -18,6 +18,7 @@ block content
   - options.min = -100
   - options.max = 100
   - options.step = 10
+  - options.vector = {}
 
 
   .row(style='margin-bottom:20px')
@@ -26,29 +27,27 @@ block content
 
   .row
     .col-md-6
+      canvas#sumCanvas.center
 
-      - options.x = xvalA
-      - options.y = yvalA
-      - options.z = zvalA
+    .col-md-6
+      - options.vector.x = xvalA
+      - options.vector.y = yvalA
+      - options.vector.z = zvalA
       - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
       +vector_slider_input('vectorA', options)
 
-      - options.x = xvalB
-      - options.y = yvalB
-      - options.z = zvalB
+      - options.vector.x = xvalB
+      - options.vector.y = yvalB
+      - options.vector.z = zvalB
       - options.color = CONSTANTS.COLORS.LIGHT_BLUE
       +vector_slider_input('vectorB', options)
 
       - options.min = 2 * options.min
       - options.max = 2 * options.max
-      - options.x = xvalA + xvalB
-      - options.y = yvalA + yvalB
-      - options.z = zvalA + zvalB
+      - options.vector.x = xvalA + xvalB
+      - options.vector.y = yvalA + yvalB
+      - options.vector.z = zvalA + zvalB
       - options.disabled = true
       - options.color = CONSTANTS.COLORS.LIGHT_GREEN
 
       +vector_slider_input('vectorSum', options)
-
-    .col-md-6
-      canvas#sumCanvas.center
-
