remove slider everywhere!

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -86,19 +86,11 @@ body, html
 // inputs - sliders
 ///////////////////////////////////////////////////////////////////////////////
 
-.slider-input-container
-  &.slider-input-container-X
-     color: red
-  &.slider-input-container-Y
-     color: green
-  &.slider-input-container-Z
-     color: blue
-
-.constant-slider-input
-  .slider-input-val
+.constant-input
+  .input-val
     width: 20px
     display: inline-block
-  .slider-input
+  .input
     position: relative;
     display: inline-block;
     width: auto;
