--- a/pages/matrices/intro/intro.jade
+++ b/pages/matrices/intro/intro.jade
@@ -26,4 +26,4 @@ block content
     - options.matrix.zz = 10
 
     .col-md-6
-      +matrix_slider_input('matrixInput', options)
+      +matrix_input('matrixInput', options)
