--- a/pages/vector_spaces/span_game/span_game.jade
+++ b/pages/vector_spaces/span_game/span_game.jade
@@ -27,7 +27,7 @@ block content
         .col-md-6
           span $c_u = $
           - options.color = CONSTANTS.COLORS.LIGHT_RED
-          +constant_slider_input('coefficientU', options)
+          +constant_input('coefficientU', options)
         .col-md-6
           p.basisEquation#uEquation
 
@@ -35,7 +35,7 @@ block content
         .col-md-6
           span $c_v = $
           - options.color = CONSTANTS.COLORS.LIGHT_GREEN
-          +constant_slider_input('coefficientV', options)
+          +constant_input('coefficientV', options)
         .col-md-6
           p.basisEquation#vEquation
 
@@ -43,7 +43,7 @@ block content
         .col-md-6
           span $c_w = $
           - options.color = CONSTANTS.COLORS.LIGHT_BLUE
-          +constant_slider_input('coefficientW', options)
+          +constant_input('coefficientW', options)
         .col-md-6
           p.basisEquation#wEquation
 
