--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -26,7 +26,7 @@ block content
       - options.vector.y = yvalA
       - options.vector.z = zvalA
       - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
-      +vector_slider_input('vectorA', options)
+      +vector_input('vectorA', options)
 
     .col-md-1#plus
        div +
@@ -38,7 +38,7 @@ block content
       - options.vector.y = yvalB
       - options.vector.z = zvalB
       - options.color = CONSTANTS.COLORS.LIGHT_BLUE
-      +vector_slider_input('vectorB', options)
+      +vector_input('vectorB', options)
 
     .col-md-1#equals
        div =
@@ -54,6 +54,6 @@ block content
       - options.disabled = true
       - options.color = CONSTANTS.COLORS.LIGHT_GREEN
 
-      +vector_slider_input('vectorSum', options)
+      +vector_input('vectorSum', options)
 
 
