--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -34,13 +34,13 @@ block content
       - options.vector.y = yvalA
       - options.vector.z = zvalA
       - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
-      +vector_slider_input('vectorA', options)
+      +vector_input('vectorA', options)
 
       - options.vector.x = xvalB
       - options.vector.y = yvalB
       - options.vector.z = zvalB
       - options.color = CONSTANTS.COLORS.LIGHT_BLUE
-      +vector_slider_input('vectorB', options)
+      +vector_input('vectorB', options)
 
       - options.min = 2 * options.min
       - options.max = 2 * options.max
@@ -50,4 +50,4 @@ block content
       - options.disabled = true
       - options.color = CONSTANTS.COLORS.LIGHT_GREEN
 
-      +vector_slider_input('vectorSum', options)
+      +vector_input('vectorSum', options)
