--- a/pages/vectors/intro/intro.jade
+++ b/pages/vectors/intro/intro.jade
@@ -18,4 +18,4 @@ block content
     - options.vector.z = 0
 
     .col-md-6
-      +vector_slider_input('vectorInput', options)
+      +vector_input('vectorInput', options)
