--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -2,12 +2,6 @@
 // page layout
 ///////////////////////////////////////////////////////////////////////////////
 
-@mixin transition($transition)
-  -moz-transition:    $transition
-  -o-transition:      $transition
-  -webkit-transition: $transition
-  transition:         $transition
-
 $header-color: #993366
 $header-padding: 20px
 $header-height: 100px
@@ -83,7 +77,18 @@ body, html
   background: $content-color
 
 ///////////////////////////////////////////////////////////////////////////////
-// inputs - sliders
+// canvas
+///////////////////////////////////////////////////////////////////////////////
+
+canvas
+  width: 100%
+  &.center
+    padding-left: 0
+    padding-right: 0
+    display: block
+
+///////////////////////////////////////////////////////////////////////////////
+// inputs
 ///////////////////////////////////////////////////////////////////////////////
 
 .constant-input
@@ -91,25 +96,8 @@ body, html
     width: 20px
     display: inline-block
   .input
-    position: relative;
-    display: inline-block;
-    width: auto;
-    /* margin-left: 10px; */
-    left: 10px;
+    position: relative
+    display: inline-block
+    width: auto
+    left: 10px
 
-.center
-    text-align: center
-    margin-left: auto
-    margin-right: auto
-
-canvas
-  width: 100%
-  &.center
-    padding-left: 0
-    padding-right: 0
-    margin-left: auto
-    margin-right: auto
-    display: block
-
-.text-center
-    text-align: center
