added script to compile sass constants, use them
- use .nodemonignore
- make arrows not visible when 0 vector
- changed colors in span game

--- a/pages/vector_spaces/span_game/span_game.sass
+++ b/pages/vector_spaces/span_game/span_game.sass
@@ -4,6 +4,6 @@ body.vector_spaces-span_game
     padding-top: 25px
 
   .incorrect
-    background-color: #AAAAAA
+    background-color: $WHITE
   .correct
-    background-color: #FFFF66
+    background-color: $LIGHT_YELLOW
