--- a/pages/vector_spaces/span_game/span_game.sass
+++ b/pages/vector_spaces/span_game/span_game.sass
@@ -7,3 +7,6 @@ body.vector_spaces-span_game
     background-color: $WHITE
   .correct
     background-color: $LIGHT_YELLOW
+
+  .constant-input
+    @include calc(width, unquote('100% - 50px'))
