make the colors prettier

--- a/pages/vector_spaces/span_game/span_game.jade
+++ b/pages/vector_spaces/span_game/span_game.jade
@@ -26,7 +26,7 @@ block content
       .row
         .col-md-6
           span $c_u = $
-          - options.color = CONSTANTS.COLORS.RED
+          - options.color = CONSTANTS.COLORS.LIGHT_RED
           +constant_input('coefficientU', options)
         .col-md-6
           p.basisEquation#uEquation
@@ -34,7 +34,7 @@ block content
       .row
         .col-md-6
           span $c_v = $
-          - options.color = CONSTANTS.COLORS.GREEN
+          - options.color = CONSTANTS.COLORS.LIGHT_GREEN
           +constant_input('coefficientV', options)
         .col-md-6
           p.basisEquation#vEquation
@@ -42,7 +42,7 @@ block content
       .row
         .col-md-6
           span $c_w = $
-          - options.color = CONSTANTS.COLORS.BLUE
+          - options.color = CONSTANTS.COLORS.LIGHT_BLUE
           +constant_input('coefficientW', options)
         .col-md-6
           p.basisEquation#wEquation
