--- a/pages/vectors/addition/addition.jade
+++ b/pages/vectors/addition/addition.jade
@@ -25,7 +25,7 @@ block content
       - options.vector.x = xvalA
       - options.vector.y = yvalA
       - options.vector.z = zvalA
-      - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
+      - options.color = CONSTANTS.COLORS.PURPLISH_BLUE
       +vector_input('vectorA', options)
 
     .col-md-1#plus
@@ -37,7 +37,7 @@ block content
       - options.vector.x = xvalB
       - options.vector.y = yvalB
       - options.vector.z = zvalB
-      - options.color = CONSTANTS.COLORS.LIGHT_BLUE
+      - options.color = CONSTANTS.COLORS.PURPLISH_RED
       +vector_input('vectorB', options)
 
     .col-md-1#equals
@@ -52,7 +52,7 @@ block content
       - options.vector.y = yvalA + yvalB
       - options.vector.z = zvalA + zvalB
       - options.disabled = true
-      - options.color = CONSTANTS.COLORS.LIGHT_GREEN
+      - options.color = CONSTANTS.COLORS.PURPLE
 
       +vector_input('vectorSum', options)
 
