--- a/pages/vectors/commutativity/commutativity.jade
+++ b/pages/vectors/commutativity/commutativity.jade
@@ -33,13 +33,13 @@ block content
       - options.vector.x = xvalA
       - options.vector.y = yvalA
       - options.vector.z = zvalA
-      - options.color = CONSTANTS.COLORS.LIGHT_YELLOW
+      - options.color = CONSTANTS.COLORS.PURPLISH_BLUE
       +vector_input('vectorA', options)
 
       - options.vector.x = xvalB
       - options.vector.y = yvalB
       - options.vector.z = zvalB
-      - options.color = CONSTANTS.COLORS.LIGHT_BLUE
+      - options.color = CONSTANTS.COLORS.PURPLISH_RED
       +vector_input('vectorB', options)
 
       - options.min = 2 * options.min
@@ -48,6 +48,6 @@ block content
       - options.vector.y = yvalA + yvalB
       - options.vector.z = zvalA + zvalB
       - options.disabled = true
-      - options.color = CONSTANTS.COLORS.LIGHT_GREEN
+      - options.color = CONSTANTS.COLORS.PURPLE
 
       +vector_input('vectorSum', options)
