--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
   head
     title Eigen see clearly now
 
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
     !=css('app.css')
 
     block morehead
@@ -41,5 +42,9 @@ html
       //#footer
         p Footer
 
+    script(src='//code.jquery.com/jquery-2.1.1.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
     != js('app.js')
     block morefoot
