lots of improvements to span_game
- coordinate values come from one place
- debounce and specify IDs for latex rendering
- use determinant to make sure vectors arent too close
- hint reveal looks better
- refactoring

--- a/pages/vector_spaces/span_game/span_game.jade
+++ b/pages/vector_spaces/span_game/span_game.jade
@@ -5,9 +5,12 @@ block morehead
   - var bodyClass = 'vector_spaces-span_game'
 
 block content
+  - var maxCoefficientAbs = 10
+  #info.hidden(data-max-coefficient-abs=maxCoefficientAbs)
+
   - var options = {}
-  - options.min = -10
-  - options.max = 10
+  - options.min = -maxCoefficientAbs
+  - options.max = maxCoefficientAbs
   - options.step = 1
   - options.inline = true
   - options.wellStyle = 'margin-left: 5px;'
@@ -63,3 +66,6 @@ block content
       .row#hint.hidden
         .well
           p Try rotating the camera so that one basis vector lines up with the origin.  Then solve the problem in 2D!
+
+      br
+      br
